@@ -69,6 +69,7 @@ AC_SUBST(VERSION)
 
 # Checks for library functions.
 AC_CONFIG_FILES([Makefile
+		 guile-dbi.pc
 		 src/Makefile
 		 src/dbi/Makefile
 		 src/test/Makefile
